# spaceblocks-sample-helloworld

./: .gitignore  Readme.md  seeding.sh  setup.sh
SimplePermissions/: SimplePermissions.csproj  WeatherForecast.cs
SimplePermissions/Controllers/: WeatherForecastController.cs
SimplePermissions/Properties/: launchSettings.json
dotnet/: SimplePermissions.sln
dotnet/SimplePermissions/: SimplePermissions.csproj  SimplePermissions.http  WeatherForecast.cs
node/: index.js  package-lock.json  package.json
python/: Readme.md  main.py  pyproject.toml  requirements.txt
