[tool.poetry]
name = "simple-permissions"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "ISC"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
spaceblocks-permissions-server = {path = "../../spaceblocks-permissions/src/sdk/python/server"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
